--- a/app/views/home/batch.html.erb
+++ b/app/views/home/batch.html.erb
@@ -1,58 +1,57 @@
-<% provide(:title, 'Badger - Batch Update') %>
+<% provide(:title, t('home.batch.title')) %>
 
 <%= bootstrap_form_for :entry, style: :horizontal, left: "col-sm-2", right: "col-sm-4", help: :block do |f| %>
-  <%= f.alert_message "Please fix the errors below." %>
+  <%= f.alert_message t('global.errors') %>
   
-  <legend>Batch update</legend>
+  <legend><%= t('home.batch.legend') %></legend>
   <div class="alert alert-danger">
-    <strong>Careful in here!</strong> You can easily mess a lot of stuff up!<br/>
-    Enter numbers at top, enable the boxes next to the field you'd like to use, fill the fields and save.
+    <strong><%= t('home.batch.warning') %></strong><%= t('home.batch.warning_msg') %>
   </div>
 
-  <%= f.text_area :ordernumbers %>
+  <%= f.text_area :ordernumbers, label: t('home.batch.ordernumbers') %>
 
   <hr/>
 
-  <%= f.select :appliance_id, @appliance_names %>
-  <%= f.text_field :brand %>
-  <%= f.text_field :typenum %>
-  <%= f.text_field :serialnum %>
+  <%= f.select :appliance_id, @appliance_names, label: t('global.appliance') %>
+  <%= f.text_field :brand, label: t('global.brand') %>
+  <%= f.text_field :typenum, label: t('global.typenum') %>
+  <%= f.text_field :serialnum, label: t('global.serialnum') %>
 
-  <%= f.text_field :defect, label: 'What\'s broken?' %>
-  <%= f.text_field :repair, label: 'What\'s repaired?' %>
-  <%= f.text_field :ordered, label: 'Parts ordered?' %>
+  <%= f.text_field :defect, label: t('global.defect') %>
+  <%= f.text_field :repair, label: t('global.repair') %>
+  <%= f.text_field :ordered, label: t('global.ordered') %>
 
-  <%= f.text_field :testera, label: 'First tester' %>
-  <%= f.text_field :testerb, label: 'Second tester' %>
+  <%= f.text_field :testera, label: t('global.testera') %>
+  <%= f.text_field :testerb, label: t('global.testerb') %>
 
   <%= f.form_group :test do %>
-    <%= f.check_box :test, label: 'Test OK' %>
+    <%= f.check_box :test, label: t('global.test') %>
   <% end %>
   <%= f.form_group :repaired do %>
-    <%= f.check_box :repaired, label: 'Repaired' %>
+    <%= f.check_box :repaired, label: t('global.repaired') %>
   <% end %>
   <%= f.form_group :ready do %>
-    <%= f.check_box :ready, label: 'Ready' %>
+    <%= f.check_box :ready, label: t('global.ready') %>
   <% end %>
   <%= f.form_group :scrap do %>
-    <%= f.check_box :scrap, label: 'Scrap' %>
+    <%= f.check_box :scrap, label: t('global.scrap') %>
   <% end %>
   <%= f.form_group :accessoires do %>
-    <%= f.check_box :accessoires, label: 'Accessoires' %>
+    <%= f.check_box :accessoires, label: t('global.accessoires') %>
   <% end %>
 
-  <%= f.select :class_id, @class_names %>
+  <%= f.select :class_id, @class_names, label: t('global.class') %>
 
-  <%= f.text_area :note %>
+  <%= f.text_area :note, label: t('global.note') %>
 
   <%= f.hidden_field :company, :value => session[:company] %>
 
   <%= f.form_group do %>
-    <%= f.submit 'Batch update entries', data: { disable_with: 'Saving...' }, class: "btn btn-primary" %>
+    <%= f.submit t('home.batch.button'), data: { disable_with: t('home.batch.button_send') }, class: "btn btn-primary" %>
   <% end %>
 <% end %>
 
-<%= link_to "Back", invoices_path %>
+<%= link_to t('global.back'), invoices_path %>
 
 <script>
 	var inputs = $(".form-group");
@@ -60,10 +59,10 @@
 		var input = inputs[i];
 		var which_input = input.children[1].children[0].id;
 		if (which_input != "") {
-			input.innerHTML = input.innerHTML + '<div class="checkbox col-sm-2 batch-update"><label for="' + which_input + '_enable"><input name="entry[enable][' + which_input + ']" value="0" type="hidden"><input id="' + which_input + '_enable" name="entry[enable][' + which_input + ']" value="1" type="checkbox"> Enable</label></div>';
+			input.innerHTML = input.innerHTML + '<div class="checkbox col-sm-2 batch-update"><label for="' + which_input + '_enable"><input name="entry[enable][' + which_input + ']" value="0" type="hidden"><input id="' + which_input + '_enable" name="entry[enable][' + which_input + ']" value="1" type="checkbox"> <%= t('home.batch.enable') %></label></div>';
 		} else {
 			var which_input_checkbox = input.children[1].children[0].children[0].htmlFor;
-			input.innerHTML = input.innerHTML + '<div class="checkbox col-sm-2 batch-update"><label for="' + which_input_checkbox + '_enable"><input name="entry[enable][' + which_input_checkbox + ']" value="0" type="hidden"><input id="' + which_input_checkbox + '_enable" name="entry[enable][' + which_input_checkbox + ']" value="1" type="checkbox"> Enable</label></div>';
+			input.innerHTML = input.innerHTML + '<div class="checkbox col-sm-2 batch-update"><label for="' + which_input_checkbox + '_enable"><input name="entry[enable][' + which_input_checkbox + ']" value="0" type="hidden"><input id="' + which_input_checkbox + '_enable" name="entry[enable][' + which_input_checkbox + ']" value="1" type="checkbox"> <%= t('home.batch.enable') %></label></div>';
 		}
 	}
 </script>
