--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -1,16 +1,16 @@
-<% provide(:title, 'Badger - Invoices for ' + session[:company]) %>
+<% provide(:title, t('invoice.inde.title') + session[:company]) %>
 
-<legend>Invoices for <%= session[:company] %></legend>
+<legend><%= "#{t('invoice.index.legend')}#{session[:company]}" %></legend>
   <div>
     <% if @invoices.length == 0 %>
-      <p>No invoices here</p>
+      <p><%= t('invoice.index.empty_list') %></p>
     <% else %>
       <table class="table table-condensed table-striped table-hover">
         <thead>
           <tr>
             <th>#</th>
-            <th>Items</th>
-            <th>Date</th>
+            <th><%= t('invoice.index.items') %></th>
+            <th><%= t('invoice.index.date') %></th>
             <th style="width:17px;"></th>
             <% if can? :destroy, Invoice %>
               <th style="width:17px;"></th>
@@ -30,7 +30,7 @@
                 </td>
                 <% if can? :destroy, Invoice %>
                 <td>
-                  <%= link_to(invoice_path(invoice), :data => { :confirm => "Are you sure?" }, :method => :delete) do %>
+                  <%= link_to(invoice_path(invoice), :data => { :confirm => t('global.sure') }, :method => :delete) do %>
                     <span class="glyphicon glyphicon-remove"></span>
                   <% end %>
                 </td>
@@ -45,6 +45,6 @@
   </div>
 <% if can? :create, Invoice %>
   <div>
-    <%= link_to("Add invoice", new_invoice_path, :class => 'btn btn-mini btn-primary') %>
+    <%= link_to(t('invoice.index.add_invoice'), new_invoice_path, :class => 'btn btn-mini btn-primary') %>
   </div>
 <% end %>
