--- a/app/views/layouts/_landing.html.erb
+++ b/app/views/layouts/_landing.html.erb
@@ -28,6 +28,17 @@
   </div>
 </div>
 
+<!-- Flags to switch languages -->
+<%= link_to(root_path(locale: 'en')) do %>
+  <span class="languageflag landingflag enflag"></span>
+<% end %>
+<%= link_to(root_path(locale: 'nl')) do %>
+  <span class="languageflag landingflag nlflag"></span>
+<% end %>
+<%= link_to(root_path(locale: 'de')) do %>
+  <span class="languageflag landingflag deflag"></span>
+<% end %>
+
 <!-- Report button with extra classes -->
 <a href="#" class="btn btn-warning btn-report" data-toggle="modal" data-target="#modal-report">
   <%= t('layouts.report.button_large') %>
