--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,6 +6,7 @@
             <% unless session[:company].nil? %>
               <%= ' @ ' + session[:company].titleize %>
             <% end %>
+            <span class="languageflag <%= I18n.locale.to_s %>flag"></span> 
           <% end %>
         </p>
     </li>
