completed Dutch translation, and one minor bugfix

--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -42,7 +42,7 @@
   <p><%= t('entry.edit.message') %></p>
  
   <%= f.form_group do %>
-    <%= f.submit t('enty.new.button'), data: { disable_with: t('entry.new.button_send') }, class: "btn btn-primary" %>
+    <%= f.submit t('entry.new.button'), data: { disable_with: t('entry.new.button_send') }, class: "btn btn-primary" %>
   <% end %>
 <% end %>
  
