--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,17 +12,29 @@
  *= require_tree .
 */
 
-.content {
-  background-color: #eee;
-  padding: 20px;
-  margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
-  -webkit-border-radius: 0 0 6px 6px;
-  -moz-border-radius: 0 0 6px 6px;
-  border-radius: 0 0 6px 6px;
-  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-  -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-  box-shadow: 0 1px 2px rgba(0,0,0,.15);
+$black: #232323;
+$white: #fafafa;
+
+$gray-darker: #202020;
+$gray-dark: #303030;
+$gray: #505050;
+$gray-light: #b0b0b0;
+$gray-lighter: #e0e0e0;
+
+$brand-primary: #6a9fb5;
+$brand-success: #90a959;
+$brand-info: #75b5aa;
+$brand-warning: #f4bf75;
+$brand-danger: #ac4142;
+
+$font-family-sans-serif: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif !default;
+
+@import "bootstrap";
+
+body {
+  padding-top: 60px;
 }
+
 
 /* give icons some extra margin to the right */
 .glyphicon {
@@ -38,14 +50,54 @@
   margin-top: auto;
 }
 
+.navbar {
+  background-color: $brand-info;
+  border-color: lighten($brand-info, 15%);
+
+  .navbar-collapse {
+    border-color: lighten($brand-info, 15%);
+  }
+  .navbar-brand {
+    color: $white;
+    &:hover {
+      color: $gray-lighter;
+    }
+  }
+  .navbar-nav {
+    li {
+      a {
+        color: $gray-lighter;
+        &:hover {
+          color: $white;
+        }
+      }
+    }
+    .active {
+      a, a:hover {
+        color: $white;
+        background-color: lighten($brand-info, 15%);
+      }
+    }
+  }
+  .navbar-toggle {
+    border-color: $brand-info;
+    &:hover {
+      background-color: lighten($brand-info, 15%);
+      border-color: lighten($brand-info, 15%);
+    }
+  }
+  /* /navigation name/company label styled like an anchor */
+  .info-label {
+    color: $gray-lighter;
+    margin: 0 !important;
+    padding: 15px;
+    position: relative;
+  }
+}
+
 /* /invoices class titles need no margin */
 table h6 {
   margin: 0 !important
-}
-
-/* Copyright footer */
-footer {
-  padding-top: 10px
 }
 
 /* Give buttons some top margin and minimum width */
@@ -72,13 +124,7 @@ a span:hover {
   color: #000
 }
 
-/* /navigation name/company label styled like an anchor */
-.info-label {
-  margin: 0 !important;
-  padding: 15px;
-  position: relative;
-}
-
+/* Languageflags */
 .languageflag{
   display:inline-block;
   height:11px;
@@ -89,15 +135,12 @@ a span:hover {
 .nlflag {
   background-position: -48px -44px;
 }
-
 .enflag {
   background-position: -16px -275px;
 }
-
 .deflag {
   background-position: -16px -22px;
 }
-
 
 /* /stats charts get some bottom margin */
 .stat-chart {
@@ -111,465 +154,97 @@ a span:hover {
 
 /* Custom colours for stat progress bars */
 .stat-colour-new {
-  color: #16a085 !important;  
-  background-color: #16a085 !important; 
+  color: lighten($brand-success, 15%) !important;  
+  background-color: lighten($brand-success, 15%) !important; 
 }
-
 .stat-colour-tested {
-  color: #27ae60 !important;
-  background-color: #27ae60 !important;
+  color: $brand-success !important;
+  background-color: $brand-success !important;
 }
-
 .stat-colour-repaired {
-  color: #2980b9 !important;
-  background-color: #2980b9 !important;
+  color: $brand-info !important;
+  background-color: $brand-info !important;
 }
-
 .stat-colour-scrap {
-  color: #8e44ad !important;
-  background-color: #8e44ad !important;
+  color: $brand-primary !important;
+  background-color: $brand-primary !important;
 }
-
 .stat-colour-waiting,
 .stat-colour-skipped {
-  color: #f39c12 !important;
-  background-color: #f39c12 !important;
+  color: $brand-warning !important;
+  background-color: $brand-warning !important;
 }
-
 .stat-colour-ready {
-  color: #d35400 !important;
-  background-color: #d35400 !important;
+  color: $brand-danger !important;
+  background-color: $brand-danger !important;
 }
-
 .stat-colour-sent {
-  color: #c0392b !important;
-  background-color: #c0392b !important;
+  color: darken($brand-danger, 15%) !important;
+  background-color: darken($brand-danger, 15%) !important;
 }
-
 .stat-colour-none {
   background-color: transparent !important
 }
 
-/* Reset content background */
-.content {
-  background-color: #fff !important;
-  border: none !important;
-  box-shadow: none !important;
-}
-
-
 /* Footer styling */
 footer {
+  padding-top: 10px;
   margin-top: 30px;
-  background-color: #F8F8F8;
-  color: #777;
+  background-color: lighten($gray-lighter, 7.5%);
+  color: $gray;
   text-align: center;
-  border-top: 1px solid #e5e5e5;
-  border-bottom: 1px solid #e5e5e5;
+  border-top: 1px solid $gray-lighter;
+  border-bottom: 1px solid $gray-lighter;
 }
 .footer-links {
   margin: 10px 0;
   padding-left: 0;
-}
-.footer-links li {
-  display: inline;
-  padding: 0 2px;
-}
-.footer-links li:first-child {
-  padding-left: 0;
+  li {
+    display: inline;
+    padding: 0 2px;
+    &:first-child {
+      padding-left: 0;
+    }
+  }
 }
 
 @media (min-width: 768px) {
   footer {
     text-align: left;
+    p {
+      margin-bottom: 0;
+    }
   }
-  footer p {
-    margin-bottom: 0;
-  }
-}
-
-body {
-    min-height: 100%;
-  min-width: 100%;
 }
 
 /* Landing page */
-.landing {
-  position: relative;
-  padding: 0;
-  background-color: #fafafa;
-}
 
-.landing #headerwrap {
-  margin-top: -10px;
-  padding-top: 20px;
-  text-align: center;
-  min-height: 700px;
-  width: 100%;
-}
-
-.landing #headerwrap h1 {
-  font-size: 80px;
-  font-weight: 700;
-}
-
-.landing #headerwrap h1, #headerwrap h2 {
-  color: #232323;
-}
-
-.landing .btn-signup {
+/* Landing page buttons */
+.btn-signup,
+.btn-report {
   padding: 5px 12px !important;
 }
-
-.landing .btn-report {
-  position: absolute;
-  top: 20px;
-  right: 10px;
+.btn-group-landing {
+  width: 100%;
+  .btn {
+    width: 100%;
+    &:not(:first-child) {
+      margin-top: 5px;
+    }
+  }
 }
 
-.landingflag {
-  position: absolute;
-  top: 25px;
+/* Landing page flags */
+.panel-heading-landing {
+  position: relative;
 }
 
-.landing .enflag {
-  left: 20px;
-}
-
-.landing .nlflag {
-  left: 45px;
-}
-
-.landing .deflag {
-  left: 70px;
-}
-
-/* Washing Machine CSS */
-.wrapper {
+.landing-languageflags {
+  .languageflag {
     position: absolute;
-    z-index: 1;
-    width: 290px;
-    top: 66%;
-    left: 50%;
-    margin-top: -330px;
-    margin-left: -145px;
-}
-
-/* Washing machine */
-.washingmachine {
-    position: absolute;
-    height: 380px;
-    width: 290px;
-    border-top: 14px solid #97BDAF;
-    border-radius: 4px;
-    background-color: #E4F2ED;
-}
-
-/* Shadow */
-.washingmachine:before {
-    content: "";
-    position: absolute;
-    z-index: -1;
-    bottom: 20px;
-    left: 50%;
-    margin-left: -145px;
-    width: 290px;
-    height: 20px;
-    -webkit-box-shadow: 0 20px 40px 30px rgba(0, 0, 0, 0.15);
-    -moz-box-shadow:    0 20px 40px 30px rgba(0, 0, 0, 0.15);
-    -ms-box-shadow:     0 20px 40px 30px rgba(0, 0, 0, 0.15);
-    -o-box-shadow:      0 20px 40px 30px rgba(0, 0, 0, 0.15);
-    box-shadow:         0 20px 40px 30px rgba(0, 0, 0, 0.15);
-}
-
-/* Lint filter */
-.washingmachine:after {
-    position: absolute;
-    content: "";
-    bottom: 15px;
-    left: 15px;
-    width: 70px;
-    height: 35px;
-    border-radius: 2px;
-    border: 1px solid #B1CBC2;
-}
-
-/* Door */
-.washingmachine .door {
-    position: absolute;
-    top: 90px;
-    left: 43.5%;
-    margin-left: -77px;
-    width: 185px;
-    height: 185px;
-    border: 22px solid #97BDAF;
-    border-radius: 97px;
-    background-image: -webkit-gradient(
-        linear,
-        left top,
-        left bottom,
-        color-stop(0, rgba(73, 96, 88, 0.85)),
-        color-stop(1, rgba(87, 115, 105, 0.85))
-    );
-    background-image:      -o-linear-gradient(bottom, rgba(73, 96, 88, 0.85) 0%, rgba(87, 115, 105, 0.85) 100%);
-    background-image:    -moz-linear-gradient(bottom, rgba(73, 96, 88, 0.85) 0%, rgba(87, 115, 105, 0.85) 100%);
-    background-image: -webkit-linear-gradient(bottom, rgba(73, 96, 88, 0.85) 0%, rgba(87, 115, 105, 0.85) 100%);
-    background-image:     -ms-linear-gradient(bottom, rgba(73, 96, 88, 0.85) 0%, rgba(87, 115, 105, 0.85) 100%);
-    background-image:         linear-gradient(to bottom, rgba(73, 96, 88, 0.85) 0%, rgba(87, 115, 105, 0.85) 100%);
-    -webkit-transform: translateZ(0);
-    -moz-transform:    translateZ(0);
-    -ms-transform:     translateZ(0);
-    -o-transform:      translateZ(0);
-    transform:         translateZ(0);
-    -webkit-animation: close 0.5s ease-in 0s 1 forwards;
-    -moz-animation:    close 0.5s ease-in 0s 1 forwards;
-    -ms-animation:     close 0.5s ease-in 0s 1 forwards;
-    -o-animation:      close 0.5s ease-in 0s 1 forwards;
-    animation:         close 0.5s ease-in 0s 1 forwards;
-}
-
-.washingmachine:hover .door {
-    -webkit-transform: translateZ(0);
-    -moz-transform:    translateZ(0);
-    -ms-transform:     translateZ(0);
-    -o-transform:      translateZ(0);
-    transform:         translateZ(0);
-    -webkit-animation: open 0.5s ease-in 0s 1 forwards;
-    -moz-animation:    open 0.5s ease-in 0s 1 forwards;
-    -ms-animation:     open 0.5s ease-in 0s 1 forwards;
-    -o-animation:      open 0.5s ease-in 0s 1 forwards;
-    animation:         open 0.5s ease-in 0s 1 forwards;
-}
-
-/* Animate to open */
-@-webkit-keyframes open {
-    from {
-        -webkit-transform: perspective(1000px) rotateY(0deg);
-        -webkit-transform-origin: 0% 0%;
-    }
-    to {
-        -webkit-transform: perspective(1000px) rotateY(-105deg);
-        -webkit-transform-origin: 0% 0%;
-    }
-}
-
-@-moz-keyframes open {
-    from {
-        -moz-transform: perspective(1000px) rotateY(0deg);
-        -moz-transform-origin: 0% 0%;
-    }
-    to {
-        -moz-transform: perspective(1000px) rotateY(-105deg);
-        -moz-transform-origin: 0% 0%;
-    }
-}
-
-@-ms-keyframes open {
-    from {
-        -ms-transform: perspective(1000px) rotateY(0deg);
-        -ms-transform-origin: 0% 0%;
-    }
-    to {
-        -ms-transform: perspective(1000px) rotateY(-105deg);
-        -ms-transform-origin: 0% 0%;
-    }
-}
-
-@-o-keyframes open {
-    from {
-        -o-transform: perspective(1000px) rotateY(0deg);
-        -o-transform-origin: 0% 0%;
-    }
-    to {
-        -o-transform: perspective(1000px) rotateY(-105deg);
-        -o-transform-origin: 0% 0%;
-    }
-}
-
-@keyframes open {
-    from {
-        transform: perspective(1000px) rotateY(0deg);
-        transform-origin: 0% 0%;
-    }
-    to {
-        transform: perspective(1000px) rotateY(-105deg);
-        transform-origin: 0% 0%;
-    }
-}
-
-/* Animate to closed */
-@-webkit-keyframes close {
-    from {
-        -webkit-transform: perspective(1000px) rotateY(-105deg);
-        -webkit-transform-origin: 0% 0%;
-    }
-    to {
-        -webkit-transform: perspective(1000px) rotateY(0deg);
-        -webkit-transform-origin: 0% 0%;
-    }
-}
-
-@-moz-keyframes close {
-    from {
-        -moz-transform: perspective(1000px) rotateY(-105deg);
-        -moz-transform-origin: 0% 0%;
-    }
-    to {
-        -moz-transform: perspective(1000px) rotateY(0deg);
-        -moz-transform-origin: 0% 0%;
-    }
-}
-
-@-ms-keyframes close {
-    from {
-        -ms-transform: perspective(1000px) rotateY(-105deg);
-        -ms-transform-origin: 0% 0%;
-    }
-    to {
-        -ms-transform: perspective(1000px) rotateY(0deg);
-        -ms-transform-origin: 0% 0%;
-    }
-}
-
-@-o-keyframes close {
-    from {
-        -o-transform: perspective(1000px) rotateY(-105deg);
-        -o-transform-origin: 0% 0%;
-    }
-    to {
-        -o-transform: perspective(1000px) rotateY(0deg);
-        -o-transform-origin: 0% 0%;
-    }
-}
-
-@keyframes close {
-    from {
-        transform: perspective(1000px) rotateY(-105deg);
-        transform-origin: 0% 0%;
-    }
-    to {
-        transform: perspective(1000px) rotateY(0deg);
-        transform-origin: 0% 0%;
-    }
-}
-
-/* Drum */
-.washingmachine .drum {
-    position: absolute;
-    top: 113px;
-    left: 50%;
-    margin-left: -74px;
-    width: 140px;
-    height: 140px;
-    border: 4px solid #97BDAF;
-    border-radius: 97px;
-    background: url(../assets/drum.png) no-repeat center;
-}
-
-.washingmachine:hover .drum:before {
-    opacity: 1;
-}
-
-/* Hinge */
-.washingmachine .drum:after {
-    position: absolute;
-    content: "";
-    top: 57px;
-    left: -26px;
-    width:10px;
-    height: 16px;
-    background-color: #6D8C81;
-    border-radius: 2px;
-}
-
-/* Handle */
-.washingmachine .door:before {
-    position: absolute;
-    content: "";
-    top: 55px;
-    right: -14px;
-    width: 18px;
-    height: 28px;
-    background-color: #6D8C81;
-    border-radius: 2px;
-}
-
-/* Tray */
-.washingmachine .tray {
-    position: absolute;
-    top: 15px;
-    left: 20px;
-    width: 90px;
-    height: 25px;
-    border-top: 10px solid #C0D9D0;
-    background-color: #97BDAF;
-    border-radius: 2px;
-}
-
-/* Dial */
-.washingmachine .dial {
-    position: absolute;
-    top: 15px;
-    right: 20px;
-    width: 20px;
-    height: 20px;
-    background-color: #97BDAF;
-    border: 5px solid #C0D9D0;
-    border-radius: 15px;
-}
-
-/* Buttons */
-.washingmachine .buttons,
-.washingmachine .buttons:before,
-.washingmachine .buttons:after {
-    position: absolute;
-    top: 22px;
-    right: 60px;
-    width: 10px;
-    height: 15px;
-    background-color: #97BDAF;
-    border-radius: 2px;
-}
-
-.washingmachine .buttons:before,
-.washingmachine .buttons:after {
-    content: "";
-    top: 0;
-}
-
-.washingmachine .buttons:before { right: 15px; }
-.washingmachine .buttons:after { right: 30px; }
-
-/* Pilot light */
-.washingmachine .pilot {
-    position: absolute;
-    top: 28px;
-    width: 4px;
-    height: 4px;
-    border-radius: 2px;
-    -webkit-transition: all .5s ease-in-out;
-    -moz-transition:    all .5s ease-in-out;
-    -ms-transition:     all .5s ease-in-out;
-    transition:         all .5s ease-in-out;
-}
-
-.washingmachine .pilot-green {
-    right: 120px;
-    background-color: #4CAE4C;
-    box-shadow: 0 0 5px 1px rgba(80, 234, 80, 0.8);
-}
-
-.washingmachine .pilot-red {
-    right: 110px;
-    background-color: #9E0004;
-}
-
-.washingmachine:hover .pilot-green {
-    background-color: #2A8C2A;
-    box-shadow: none;
-}
-
-.washingmachine:hover .pilot-red {
-    background-color: #DB0006;
-    box-shadow: 0 0 5px 1px rgba(211, 5, 11, 0.4);
+    top: 10px;
+  }
+  .enflag { left: 10px; }
+  .nlflag { left: 35px; }
+  .deflag { left: 60px; }
 }
