--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -156,6 +156,11 @@
       <%= link_to(t('entry.show.sticker'), sticker_path(@entry), :class => 'btn btn-mini btn-primary') %>
     <% end %>
   </div>
+  <div style="float:left;padding-right:4px" data-no-turbolink="true">
+    <% if can? :create, Entry %>
+      <%= link_to('Create ticket', ticket_path(@entry), :class => 'btn btn-mini btn-primary') %>
+    <% end %>
+  </div>
   <% if can? :edit, Entry %>
     <%= link_to(t('entry.show.edit'), edit_entry_path(@entry), :class => 'btn btn-mini btn-primary') %>
   <% end %>
