--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,31 +8,36 @@
     <%= stylesheet_link_tag "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
     <%= yield(:head) %>
   </head>
-  <body class="<%= controller_name %> <%= action_name %> <%= @landing %>">
+  <body class="<%= controller_name %> <%= action_name %>">
   
+    
+
     <% if user_signed_in? %>
-
       <%= render 'layouts/header' %>
+    <% end %>
 
-      <div id="main" role="main">
-        <div class="container">
-          <div class="content">
-            <div class="row">
-              <div class="col-md-12">
-                <%= render 'layouts/messages' %>
+    <div id="main" role="main">
+      <div class="container">
+        <div class="content">
+          <div class="row">
+            <div class="col-md-12">
+              <%= render 'layouts/messages' %>
+              <% if user_signed_in? %>
                 <%= yield %>
-              </div>
+              <% else %>
+                <%= render 'layouts/landing' %>
+              <% end %>
             </div>
           </div>
         </div>
       </div>
+    </div>
 
+    <% if user_signed_in? %>
       <%= render 'layouts/footer' %>
-
-    <% else %>
-      <%= render 'layouts/landing' %>
     <% end %> 
 
     <%= render 'layouts/report/form' %> 
