--- a/app/views/stats/index.html.erb
+++ b/app/views/stats/index.html.erb
@@ -6,14 +6,27 @@
   <% else %>
     <%= link_to(t('stats.index.fancier'), stats_path(company: params[:company], type: 'extended'), :class => 'btn btn-primary btn-index stat-toggle') %>
   <% end %>
+        <div class="panel-group" id="accordion">
   <% @charts.each_pair do |key, array| %>
         <% if key == :global %>
           <h4><%= t('stats.index.global_label') %></h4>
         <% end %>
 
-          <a href="#" class="btn btn-success btn-chart" onClick="$('#charts_<%= key.to_s %>').slideToggle();$(window).trigger('resize');" id="<%= key.to_s %>"><%= t('stats.index.showhide') %><%= key.to_s.gsub('_', ' ') %></a><br/>
-          <div class="row" id="charts_<%= key.to_s %>" <% unless key == :global %>style="display:none;"<% end %>>
-            <% if params[:type] == 'extended' %>
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h4 class="panel-title">
+                <a data-toggle="collapse" data-parent="#accordion" href="#<%= key.to_s %>">
+                  <% if key == :global %>
+                    <%= key.to_s.gsub('_', ' ').titleize %>
+                  <% else %>
+                    <%= key.to_s.gsub('_', ' ') %>
+                  <% end %>
+                </a>
+              </h4>
+            </div>
+            <div id="<%= key.to_s %>" class="panel-collapse collapse<% if key == :global %> in<% end %>">
+              <div class="panel-body">
+                <% if params[:type] == 'extended' %>
               <div class="col-md-6 stat-chart">
                 <%= high_chart('pie_chart_stats_' + key.to_s, array[0]) %>
               </div>
@@ -28,10 +41,13 @@
                 <%= raw array[1] %>
               </div>
             <% end %>
+              </div>
+            </div>
           </div>
 
         <% if key == :global %>
           <h4><%= t('stats.index.brand_label') %></h4>
         <% end %>
   <% end %>
+  </div>
 </div>
