--- a/app/views/appliances/index.html.erb
+++ b/app/views/appliances/index.html.erb
@@ -10,6 +10,7 @@
 	    <tr>
 	      <th><%= t('global.name') %></th>
 	      <th><%= t('global.abbrevation') %></th>
+	      <th><%= t('global.url') %></th>
 	      <th style="width:17px;"></th>
 	      <th style="width:17px;"></th>
 	    </tr>
@@ -19,6 +20,7 @@
 	    <tr>
 	      <td><%= appliance.name %></td>
 	      <td><%= appliance.abb %></td>
+	      <td><%= appliance.preview %></td>
 	    </tr>
 	  <% end %>
 	  </tbody>
