--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -53,9 +53,7 @@
               </td>
               <% if can? :edit, Entry %>
                 <td data-no-turbolink="true">
-                  <%= link_to sticker_path(entry) do %>
-                    <span class="glyphicon glyphicon-barcode"></span>
-                  <% end %>
+                  <a href="#" role="button" data-placement="left" data-content="<a class='btn btn-primary btn-sm btn-print' href='<%= sticker_path(entry) %>'><%= t('entry.sticker') %></a><br><a class='btn btn-primary btn-sm btn-print' href='<%= ticket_path(entry) %>'><%= t('entry.ticket') %></a>" data-html="true"title="" data-original-title="" data-toggle="popover"><span class="glyphicon glyphicon-print"></span></a>
                 </td>
                 <td>
                   <%= link_to edit_entry_path(entry) do %>
@@ -150,3 +148,7 @@
       </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
   <% end %>
+
+<script>
+  $("[data-toggle=popover]").popover()
+</script>
