fixes of typos and stuff

--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, t('invoice.inde.title') + session[:company]) %>
+<% provide(:title, t('invoice.index.title') + session[:company]) %>
 
 <legend><%= "#{t('invoice.index.legend')}#{session[:company]}" %></legend>
   <div>
